Add meta description tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Adam Widney is a recent graduate of BCIT's Front-End Web Developer program."
+		/>
 		<title>Adam Widney</title>
 	</head>
 	<body>
